v3.5.2 (2021.05.xx)
  - Update SQLite database engine to version 3.35.5

v3.5.1 (2021.04.09)
  - Update SQLite database engine to version 3.35.4
  - Update cURL library to version 7.76.0
  - Fix bug preventing timer rules assigned a specific channel number to be changed back to 'Any channel'
  - Change how start and end times are reported for Record series timer rules so they show as 'Any day at any time'

v3.5.0 (2021.03.16)
  - Update SQLite database engine to version 3.35.1
  - Update cURL library to version 7.75.0
  - Fix bug that could cause unnecessary triggering of both channel and channel group updates
  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
  - Fix bug preventing timers and timer rules from updating when Kodi EPG 'Future days to display' setting has changed
  - Add new "Radio Channels" settings category and associated options to enable radio channel mapping
  - Adjust reported Electronic Program Guide (EPG) original air values based on the system time zone

v3.4.1 (2021.02.06)
  - Enable in-place addon migration during installation of Kodi Matrix RC1 or later
  - Fix bug that allowed startup tasks to execute out of order on systems with a low precision system clock
  - Fix bug that caused all EPG data to be resent to Kodi during startup regardless of a detected change to the data
  - Fix bug that caused "Timer Deleted" toast messages for timers associated with an existing recording
  - Reduce the amount of discovery event logging

v3.4.0 (2021.01.30)
  - Update libhdhomerun library to version 20201023
  - Update SQLite database engine to version 3.34.1
  - Add "Export discovery diagnostic data" PVR Client Specific setting
  - Add "HEVC Channels" channel group
  - Add support for persistent Recorded TV watched/unwatched (play count) flags
  - Change "DVR stream read operation minimum size" advanced option to default to "Automatic" and allow for an updated range of 4KiB to 64KiB